--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "redux-mock-store": "^1.5.4",
+    "reselect": "^5.1.1",
     "sass": "^1.77.4"
   },
   "devDependencies": {
