--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-static-copy": "^1.0.5"
   }
 }
